<resources>
    <string name="app_name">WebServicesLab</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="course_id_hint">Enter Course Id (Ex: TCSS450) </string>
    <string name="course_short_desc_hint">Enter Course Short Description (Ex: Mobile App Programming) </string>
    <string name="course_long_desc_hint">Enter Course Long Description</string>
    <string name="course_prereqs_hint">Enter prereqs</string>
    <string name="add_course_text">Add Course</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
