<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/fragment_add_course"
android:name="tcss450.uw.edu.webserviceslab.CourseAddFragment"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".CourseDetailFragment">

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/course_id_hint"
    android:id="@+id/add_course_id" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/course_short_desc_hint"
    android:id="@+id/add_course_short_desc" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/course_long_desc_hint"
    android:id="@+id/add_course_long_desc" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/course_prereqs_hint"
    android:id="@+id/add_course_prereqs" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:text="@string/add_course_text"
    android:onClick="addCourse"
    android:id="@+id/add_course_button" />
</LinearLayout>